--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,19 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  database: ana_agenda
+  adapter: postgresql
+  username: postgres
+  password: root
+  host: localhost
+  port: 5432
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  database: ana_agenda
+  adapter: postgresql
+  username: postgres
+  password: root
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
