--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,6 @@ test:
 
 production:
   <<: *default
-  username: rails
-  password: b01856e57822d14793710d477b31b1d7
+  username: postgres
+  password: root
 
