--- a/config/database.yml
+++ b/config/database.yml
@@ -7,16 +7,22 @@
 default: &default
   database: ana_agenda
   adapter: postgresql
-  username: postgres
-  password: root
+  #username: postgres
+  #password: root
+   username: rails
+    password: b01856e57822d14793710d477b31b1d7
+
   host: localhost
   port: 5432
 
 development:
   database: ana_agenda
   adapter: postgresql
-  username: postgres
-  password: root
+ # username: postgres
+ # password: root
+  username: rails
+   password: b01856e57822d14793710d477b31b1d7
+
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
